# skpijack-engine

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
assets/: bottle.mtl
src/: Camera.hpp  Logger.hpp  Main.cpp  ModelViewerMain.cpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  Window.cpp  Window.hpp  mathes.cpp  mathes.hpp
src/EclipseEditor/: Editor.cpp
src/EclipseFileSystem/: ModelLoader.cpp  ModelLoader.hpp  efs.cpp  efs.hpp
src/EclipseFilesystem/: Loader.cpp  Loader.hpp
src/EclipseGL/: Camera.hpp  GL.cpp  GL.hpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  glad.c
src/EclipseRuntime/: .Runtime.cpp.swp  Runtime.cpp  Window.cpp  Window.hpp
src/EclipseScene/: .SceneManager.cpp.swp  SceneManager.cpp  SceneManager.hpp
src/EclipseStandardLibrary/: defines.hpp  vector.hpp
src/EclipseSystem/: Window.cpp  Window.hpp
src/EclipseUtils/: Defines.hpp  Logger.hpp  Maths.cpp  Maths.hpp
src/EclipseVulkan/: vkcore.cpp  vkcore.hpp
src/ExternalIncludes/glad/: glad.h
src/Shaders/: NormalDebug.f.glsl  NormalDebug.v.glsl  TestShader.f.glsl  color_f.glsl  light_cube_v.glsl  shader_f.glsl  shader_v.glsl
